Reetan.Nayak Dev 25/force-app/main/default/objects/dca_cnvrt_file__Convert_Attachments_to_Files_Log__c/fields/dca_cnvrt_file__Detail__c.field-meta.xml
<CustomField>
    <fullName>dca_cnvrt_file__Detail__c</fullName>
    <label>Detail</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>