Reetan.Nayak Dev 25/force-app/main/default/objects/dca_cnvrt_file__Convert_Attachments_to_Files_Log__c/fields/dca_cnvrt_file__Old_Attachment_ID__c.field-meta.xml
<CustomField>
    <fullName>dca_cnvrt_file__Old_Attachment_ID__c</fullName>
    <description>If the log message is about a specific conversion issue with a record then this is the original Attachment ID.</description>
    <inlineHelpText>If the log message is about a specific conversion issue with a record then this is the original Attachment ID.</inlineHelpText>
    <label>Old Attachment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>