Reetan.Nayak Dev 25/force-app/main/default/objects/dca_cnvrt_file__Convert_Attachments_to_Files_Log__c/fields/dca_cnvrt_file__Status__c.field-meta.xml
<CustomField>
    <fullName>dca_cnvrt_file__Status__c</fullName>
    <description>Indicates the status of log message, whether an attachment was successfully converted or perhaps that it was skipped during conversion or that it failed conversion. The API values match conversion result enum value in apex code.</description>
    <inlineHelpText>Indicates the status of log message, whether an attachment was successfully converted or perhaps that it was skipped during conversion or that it failed conversion. The API values match conversion result enum value in apex code.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONVERTED</fullName>
                <default>true</default>
                <label>Converted</label>
            </value>
            <value>
                <fullName>SKIPPED</fullName>
                <label>Skipped</label>
            </value>
            <value>
                <fullName>ERROR</fullName>
                <label>Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>