Reetan.Nayak Dev 25/force-app/main/default/objects/dca_cnvrt_file__Convert_Attachments_to_Files_Log__c/listViews/dca_cnvrt_file__All.listView-meta.xml
<ListView>
    <fullName>dca_cnvrt_file__All</fullName>
    <columns>NAME</columns>
    <columns>dca_cnvrt_file__Status__c</columns>
    <columns>dca_cnvrt_file__Summary__c</columns>
    <columns>dca_cnvrt_file__Detail__c</columns>
    <columns>dca_cnvrt_file__Log_Time__c</columns>
    <columns>dca_cnvrt_file__Old_Attachment_ID__c</columns>
    <columns>dca_cnvrt_file__New_File_ID__c</columns>
    <columns>dca_cnvrt_file__Job_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>